Porfolio & Contact. Spanish.

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">J.Alberto Azevedo</h1>
-                        <h3 class="home__subtitle">Desarrollador de Software</h3>
+                        <h3 class="home__subtitle">Desarrollador Web</h3>
                         <p class="home__description">Especializado en JavaScript y su entorno.
                         </p>
                         <a href="#contact" class="button button--flex">
-                            Contáctame <i class="uil uil-message button__icon"></i>
+                            ¿Hablamos? <i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -509,15 +509,16 @@
                 <div class="swiper-wrapper">
                     <!-- PORTFOLIO 1-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/project-RUTalking2Me.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">App full stack para comunicación a distancia
-                                mediante videollamadas y chat. </h3>
+                            <h3 class="portfolio__title">App full stack para comunicación mediante videollamadas y chat.
+                            </h3>
                             <p class="portfolio__description">Vue, Quasar, TypeScript, Node.js, Expresss,
-                                MongoDB Atlas, Mongoose, JSON Web Token, Postman, Studio 3T.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                                MongoDB Atlas, Mongoose, JSON Web Token, Postman, Studio 3T. Diseño responsive</p>
+                            <a href="https://github.com/Alazib/Remote_communication_app---Frontend"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir al código
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -531,9 +532,10 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Abastores, la primera lonja online de materias primas.</h3>
                             <p class="portfolio__description">Vue, Quasar, TypeScript, Python, Django, Cypress, Docker,
-                                Storybook. Metodología Agile. </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                                Storybook. Diseño responsive. Metodología Agile. </p>
+                            <a href="https://app.abastores.com/data/list"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir a la App
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -545,9 +547,10 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Porfolio personal</h3>
                             <p class="portfolio__description">HTML, JavaScript Vanilla, CSS, SwiperJS, EmailJS,
-                                Iconscout. </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                                Iconscout. Diseño responsive </p>
+                            <a href="https://github.com/Alazib/Porfolio_J.Alberto_Azevedo"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir al código
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -566,6 +569,8 @@
 
             <br></br>
             <br></br>
+            <br></br>
+
 
             <span class="section__subtitle stage__time"> <i class="uil uil-calendar-alt"></i>
                 March 2022 - December 2022</span>
@@ -573,14 +578,15 @@
                 <div class="swiper-wrapper">
                     <!-- PORTFOLIO 1-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/project-FantasyHunter.jpeg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                            <h3 class="portfolio__title">Videojuego: Fantasy Hunter</h3>
+                            <p class="portfolio__description">HTML, CSS, JavaScript. Git, GitHub. Introducción a Clean
+                                Code, SOLID y DRY </p>
+                            <a href="https://github.com/Alazib/fantasyHunter"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir al código
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -588,14 +594,15 @@
 
                     <!-- PORTFOLIO 2-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/project-businessmanagement.jpeg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Ejemplo Nº2</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                            <h3 class="portfolio__title">CRUD: Business Management App</h3>
+                            <p class="portfolio__description">ReactJS, Testing integración (Jest y React Testing
+                                Library). APIs(Google Maps y Reqres) Atomic design, componetización. </p>
+                            <a href="https://github.com/Alazib/businessManagementApp"
+                                class="button button--flex button--small portfolio__button">
+                                Ir al código
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
 
@@ -603,20 +610,36 @@
 
 
 
-                    </div> <!-- PORTFOLIO 3-->
+                    </div>
 
+                    <!-- PORTFOLIO 3-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio3.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/project-to-do-list.png" alt="" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Ejemplo Nº3</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                            <h3 class="portfolio__title">CRUD: To do list</h3>
+                            <p class="portfolio__description">ReactJS </p>
+                            <a href="https://github.com/Alazib/toDoList"
+                                class="button button--flex button--small portfolio__button">
+                                Ir al código
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
+
+                    <!-- PORTFOLIO 4-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/project-shoppingcart.png" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Carrito de la compra</h3>
+                            <p class="portfolio__description">Vue, Quasar, JavaScript. Gestion de estados con Pinia </p>
+                            <a href="https://github.com/Alazib/shoppingCart__VUE"
+                                class="button button--flex button--small portfolio__button">
+                                Ir al código
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
 
                 </div>
 
@@ -633,23 +656,31 @@
 
         <section class="contact section" id="contact">
 
-            <h2 class="section__title">Contact</h2>
-            <span class="section__subtitle">Get in touch</span>
+            <h2 class="section__title">Contacto</h2>
+            <span class="section__subtitle">¿Hablamos?</span>
 
             <div class="contact__container container grid">
                 <div>
                     <div class="contact__information">
                         <i class="uil uil-phone contact__icon"></i>
                         <div>
-                            <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">+34650481482</span>
+                            <h3 class="contact__title">Llámame</h3>
+                            <a href="tel:+34650481482" class="contact__subtitle">+34650481482</a>
+                        </div>
+                    </div>
+                    <div class="contact__information">
+                        <i class="uil uil-whatsapp contact__icon "></i>
+                        <div>
+                            <h3 class="contact__title">WhatsApp</h3>
+                            <a href="https://wa.me/+34650481482" class="contact__subtitle">+34650481482</a>
                         </div>
                     </div>
                     <div class="contact__information">
                         <i class="uil uil uil-envelope contact__icon"></i>
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">alazib.developer@gmail.com</span>
+                            <a href="mailto:alazib.developer@gmail.com"
+                                class="contact__subtitle">alazib.developer@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact__information">
@@ -666,34 +697,32 @@
                 <form class="contact__form grid" id="form">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
-                            <label class="contact__label">Name</label>
+                            <label class="contact__label">Nombre</label>
                             <input type="text" class="contact__input" name="from_name">
                         </div>
                         <div class="contact__content">
-                            <label for="" class="contact__label">Email</label>
+                            <label for="" class="contact__label">Correo</label>
                             <input type="email" class="contact__input" name="from_mail" required>
                         </div>
                     </div>
                     <div class="contact__content">
-                        <label for="" class="contact__label">Subject</label>
+                        <label for="" class="contact__label">Asunto</label>
                         <input type="text" class="contact__input" name="subject">
                     </div>
                     <div class="contact__content">
-                        <label for="" class="contact__label">Message</label>
+                        <label for="" class="contact__label">Mensaje</label>
                         <textarea name="message" cols="30" rows="6" class="contact__input" required></textarea>
                     </div>
 
                     <div class="form__notification">
-                        <span class="form__notification-success form__notification-success--hidden">Your
-                            message was sent successfully</span>
-                        <span class="form__notification-error form__notification-error--hidden">Ooops...
-                            an
-                            error has ocurred. Please, try some minutes
-                            later</span>
+                        <span class="form__notification-success form__notification-success--hidden">Tu mensaje se ha
+                            enviado correctamente</span>
+                        <span class="form__notification-error form__notification-error--hidden">¡Vaya! Ha ocurrido un
+                            error. Por favor, inténtalo de nuevo en unos minutos</span>
                     </div>
                     <div>
                         <button class="button button--flex" id="button" type="submit">
-                            Send Message
+                            Enviar mensaje
                             <i class="uil uil-message button__icon"></i>
                         </button>
 
@@ -710,18 +739,18 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">J.Alberto Azevedo</h1>
-                    <span class="footer__subtitle">Frontend Developer</span>
+                    <span class="footer__subtitle">Desarrollador Web</span>
                 </div>
 
                 <ul class="footer__links">
                     <li>
-                        <a href="#qualification" class="footer__link">Qualification</a>
+                        <a href="#qualification" class="footer__link">Cualificación</a>
                     </li>
                     <li>
                         <a href="#portfolio" class="footer__link">Porfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" class="footer__link">Contact</a>
+                        <a href="#contact" class="footer__link">Contacto</a>
                     </li>
                 </ul>
 
@@ -736,7 +765,7 @@
 
                 </div>
             </div>
-            <p class="footer__copy">&#169; J.Alberto Azevedo. All right reserved</p>
+            <p class="footer__copy">&#169; J.Alberto Azevedo. Todos los derechos reservados</p>
         </div>
 
     </footer>
