--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <header class="header" id="header">
         <nav class="nav container">
 
-            <a href="#" class="nav__logo">J.Alberto Azevedo</a>
-
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
 
@@ -95,7 +93,9 @@
                     <div class="home__data">
                         <h1 class="home__title">J.Alberto Azevedo</h1>
                         <h3 class="home__subtitle">Desarrollador Web</h3>
-                        <p class="home__description">Especializado en JavaScript y su entorno.
+                        <p class="home__description"> "Listening, testing, coding, designing. That’s all there is to
+                            software. Anyone who tells you different is selling something". Kent Beck. Extreme
+                            programming: embrace change.
                         </p>
                         <a href="#contact" class="button button--flex">
                             ¿Hablamos? <i class="uil uil-message button__icon"></i>
@@ -113,30 +113,32 @@
         </section>
 
         <section class="about section" id="about">
-            <h2 class="section__title">About Me</h2>
-            <span class="section__subtitle">My introduction</span>
+            <h2 class="section__title">Sobre mí</h2>
+            <br>
+            <br>
             <div class="about__container container grid">
                 <img src="assets/images/J.Alberto Azevedo-Frontend Developer2.png" alt="" class="about__img">
                 <div class="about__data">
-                    <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae commodi
-                        deserunt impedit dicta officiis, possimus ea unde enim?</p>
+                    <p class="about__description">Soy un apasionado de JavaScript y todo su
+                        entorno.<br><br>
+                        Enfocado principalmente en el frontend con Vue y React. Sin embargo, mi gusto por un
+                        conocimiento integral hace que también trabaje el backend. <br><br>
+                        Un código sin testing no es código, tan solo una declaración de intenciones.</p>
                     <div class="about__info">
                         <div>
                             <span class="about__info-title">1</span>
-                            <span class="about__info-name">Years <br> experience</span>
+                            <span class="about__info-name">Año <br> de experiencia</span>
                         </div>
-
-
                         <div>
-                            <span class="about__info-title">6</span>
-                            <span class="about__info-name">Completed <br> projects</span>
+                            <span class="about__info-title">7</span>
+                            <span class="about__info-name">Proyectos<br> completados</span>
                         </div>
 
-
+                        <!-- 
                         <div>
                             <span class="about__info-title">1</span>
-                            <span class="about__info-name">Companies <br> worked</span>
-                        </div>
+                            <span class="about__info-name">Empresa <br> trabajo </span>
+                        </div> -->
                     </div>
                     <div class="about__buttons">
                         <a download="" href="assets/pdf/J.Alberto Azevedo-CV Frontend-en.pdf"
@@ -260,7 +262,6 @@
                         </div>
                         <div class="skills__list grid">
 
-                            <br />
                             <span class="skills__subtitle"> Testing</span>
 
                             <div class="skills__data">
