--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                         </div> -->
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Frontend-en.pdf"
+                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Frontend-es.pdf"
                             class="button button--flex">
-                            Download CV
+                            Descargar CV
                             <i class="uil uil-airplay button__icon"></i>
                         </a>
                     </div>
@@ -835,7 +835,7 @@
                     <div class="contact__information">
                         <i class="uil uil uil-envelope contact__icon"></i>
                         <div>
-                            <h3 class="contact__title">Email</h3>
+                            <h3 class="contact__title">Correo</h3>
                             <a href="mailto:alazib.developer@gmail.com"
                                 class="contact__subtitle">alazib.developer@gmail.com</a>
                         </div>
@@ -843,8 +843,8 @@
                     <div class="contact__information">
                         <i class="uil uil-map-marker contact__icon"></i>
                         <div>
-                            <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Spain</span>
+                            <h3 class="contact__title">Localización</h3>
+                            <span class="contact__subtitle">España</span>
                         </div>
                     </div>
                 </div>
