--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="header" id="header">
         <nav class="nav container">
-
+            <span></span>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
 
@@ -65,10 +65,11 @@
 
             <div class="nav__btns">
                 <!-- Theme change button    -->
-                <i class="uil uil-moon change-theme" id="theme-button"></i>
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
+
             </div>
         </nav>
     </header>
