--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>J.Alberto Azevedo Portfolio</title>
+    <title>J.Alberto Azevedo - Desarrollador web</title>
 </head>
 
 <body>
