--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>J.Alberto Azevedo - Desarrollador web</title>
+    <title>J.Alberto Azevedo - Desarrollador de Aplicaciones Web</title>
 </head>
 
 <body>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">J.Alberto Azevedo</h1>
-                        <h3 class="home__subtitle">Desarrollador Web</h3>
+                        <h3 class="home__subtitle">Desarrollador de Aplicaciones Web</h3>
                         <p class="home__description"> "Listening, testing, coding, designing. That’s all there is to
                             software. Anyone who tells you different is selling something". Kent Beck. Extreme
                             programming: embrace change.
@@ -142,7 +142,7 @@
                         </div> -->
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Frontend-es.pdf"
+                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Desarrollador de Aplicaciones Web-es.pdf"
                             class="button button--flex">
                             Descargar CV
                             <i class="uil uil-airplay button__icon"></i>
@@ -897,7 +897,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">J.Alberto Azevedo</h1>
-                    <span class="footer__subtitle">Desarrollador Web</span>
+                    <span class="footer__subtitle">Desarrollador de Aplicaciones Web</span>
                 </div>
 
                 <ul class="footer__links">
@@ -905,7 +905,7 @@
                         <a href="#qualification" class="footer__link">Cualificación</a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="footer__link">Porfolio</a>
+                        <a href="#portfolio" class="footer__link">Portfolio</a>
                     </li>
                     <li>
                         <a href="#contact" class="footer__link">Contacto</a>
