extra details added

--- a/index.html
+++ b/index.html
@@ -672,7 +672,8 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">App full stack para comunicación mediante videollamadas y chat.
                             </h3>
-                            <p class="portfolio__description">Vue, Quasar, TypeScript, Node.js, Expresss,
+                            <p class="portfolio__description">Vue, Quasar, TypeScript, PeerJS, UnoCSS, Node.js,
+                                Expresss,
                                 MongoDB Atlas, Mongoose, JSON Web Token, Postman, Studio 3T. Diseño responsive</p>
                             <a href="https://github.com/Alazib/Remote_communication_app---Frontend"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -689,7 +690,8 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Abastores, la primera lonja online de materias primas.</h3>
-                            <p class="portfolio__description">Vue, Quasar, TypeScript, Python, Django, Cypress, Docker,
+                            <p class="portfolio__description">Vue, Quasar, TypeScript, UnoCSS, Python, Django, Cypress,
+                                Docker,
                                 Storybook. Diseño responsive. Metodología Agile. </p>
                             <a href="https://app.abastores.com/data/list"
                                 class="button button--flex button--small portfolio__button" target="_blank">
