--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <i class="uil uil-smile skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Soft Skills</h1>
+                                <h1 class="skills__title">Soft skills</h1>
                                 <span class="skills__subtitle"></span>
                             </div>
 
@@ -536,7 +536,7 @@
                                 <span class="qualification__line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification__title">Máster de Programación Y Diseño de Software
+                                <h3 class="qualification__title">Máster de Programación y Diseño de Software
                                 </h3>
                                 <span class="qualification__subtitle"> EscuelaIT en colaboración con Universidad
                                     Politécnica de Madrid,
