--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </div>
 
                         <div class="skills__list grid">
-
+                            <span class="skills__subtitle">Lenguajes de publicación</span>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">HTML</h3>
@@ -196,6 +196,11 @@
                                 </div>
                             </div>
 
+                        </div>
+
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> Lenguajes de programación</span>
+
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
@@ -205,6 +210,30 @@
                                     <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">TypeScript</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__typescript"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Python</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__python"></span>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> Librerías/Frameworks</span>
+
 
                             <div class="skills__data">
                                 <div class="skills__titles">
@@ -235,15 +264,7 @@
                                     <span class="skills__percentage skills__react"></span>
                                 </div>
                             </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">TypeScript</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__typescript"></span>
-                                </div>
-                            </div>
+
 
                         </div>
 
@@ -294,7 +315,9 @@
                                     <span class="skills__percentage skills__react-testing-library"></span>
                                 </div>
                             </div>
-                            <br />
+
+                        </div>
+                        <div class="skills__list grid">
                             <span class="skills__subtitle"> Otras tecnologías</span>
 
                             <div class="skills__data">
@@ -336,6 +359,15 @@
                                     <span class="skills__percentage skills__agile"></span>
                                 </div>
                             </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Docker</h3>
+                                    <span class="skills__number">60%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__docker"></span>
+                                </div>
+                            </div>
 
                             <div class="skills__data">
                                 <div class="skills__titles">
@@ -346,6 +378,7 @@
                                     <span class="skills__percentage skills__uml"></span>
                                 </div>
                             </div>
+
 
                             <div class="skills__data">
                                 <div class="skills__titles">
@@ -358,6 +391,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
                 <div>
@@ -374,7 +408,7 @@
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
                         <div class="skills__list grid">
-
+                            <span class="skills__subtitle"> JavaScript Backend</span>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">NodeJS</h3>
@@ -414,6 +448,40 @@
                                     <span class="skills__percentage skills__mongoose"></span>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> Python Backend</span>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Python</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__python"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Django</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__django"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">MariaDB</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mariadb"></span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -601,7 +669,7 @@
                                 <span class="qualification__subtitle">Abastores, Madrid. Contrato en prácticas</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Diciembre 2022 - Actualidad
+                                    Octubre 2022 - Actualidad
                                 </div>
                             </div>
                             <div>
