Web App Developer

--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@
                     </div>
 
                 </div>
+
             </div>
 
         </section>
@@ -664,7 +665,7 @@
                         <!-- QUALIFICATION 1-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Desarrollador de Software
+                                <h3 class="qualification__title">Desarrollador de Aplicaciones Web
                                 </h3>
                                 <span class="qualification__subtitle">Abastores, Madrid. Contrato en prácticas</span>
                                 <div class="qualification__calendar">
