--- a/index.html
+++ b/index.html
@@ -428,26 +428,6 @@
                                     <span class="skills__percentage skills__express"></span>
                                 </div>
                             </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">MongoDB</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mongodb"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Mongoose</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mongoose"></span>
-                                </div>
-                            </div>
                         </div>
 
                         <div class="skills__list grid">
@@ -472,6 +452,9 @@
                                 </div>
                             </div>
 
+                        </div>
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> Bases de Datos</span>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">MariaDB</h3>
@@ -479,6 +462,25 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__mariadb"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">MongoDB</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mongodb"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Mongoose</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mongoose"></span>
                                 </div>
                             </div>
 
