--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    February 2023 - February 2024
+                                    Diciembre 2022 - Septiembre 2023
                                 </div>
                             </div>
 
@@ -672,7 +672,7 @@
                                 <span class="qualification__subtitle">Abastores, Madrid. Contrato en prácticas</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Octubre 2022 - Actualidad
+                                    Octubre 2022 - Septiembre 2023
                                 </div>
                             </div>
                             <div>
@@ -728,13 +728,71 @@
             </div>
         </section>
 
+
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
             <span class="section__subtitle">Mis proyectos</span>
+
+
+            <!-- Level 3 -->
             <span class="section__subtitle stage__time">
-                <i class="uil uil-calendar-alt"></i> Diciembre 2022 - Actualidad
+                <i class="uil uil-calendar-alt"></i> Septiembre 2023 - Actualidad
             </span>
             <div class="portfolio__container container swiper">
+
+                <div class="swiper-wrapper">
+
+                    <!-- En el siguiente <div/> hay que volver a añadir la clase 'swiper-slide' cuando se añada otro proyecto. La clase 'swiper-slide' 
+       tuvo que ser eliminada porque, de otro modo, no funcionaban los enlaces al haber solo 1 proyecto. Se desconoce el por qué de este comportamiento-->
+
+                    <div class="portfolio__content grid ">
+                        <img src="assets/images/project-E-commerce.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">App full stack E-Commerce de ropa
+                            </h3>
+                            <p class="portfolio__description">React, React Router, Redux (Thunk, Saga, ToolKit), Styled
+                                Component,
+                                TypeScript, Stripe, Firebase (authentication and Firestore BBDD), Testing (Jest y React
+                                Testing Library)
+                            </p>
+                            <a href="https://github.com/Alazib/clothes-e-commerce--v1--redux-thunks-and-redux-saga"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir al código
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                            <a href="https://magnificent-blini-4fc047.netlify.app/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Ir a la App
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+            <br></br>
+            <br></br>
+            <br></br>
+
+
+
+
+            <!-- Level 2 -->
+            <span class="section__subtitle stage__time">
+                <i class="uil uil-calendar-alt"></i> Diciembre 2022 - Septiembre 2023
+            </span>
+            <div class="portfolio__container container swiper">
+
                 <div class="swiper-wrapper">
                     <!-- PORTFOLIO 1-->
                     <div class="portfolio__content grid swiper-slide">
@@ -788,7 +846,6 @@
                     </div>
 
                 </div>
-
                 <div class="swiper-button-next">
                     <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
                 </div>
@@ -796,15 +853,16 @@
                     <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
                 </div>
                 <div class="swiper-pagination"></div>
+
             </div>
 
             <br></br>
             <br></br>
             <br></br>
 
-
+            <!-- Level 1 -->
             <span class="section__subtitle stage__time"> <i class="uil uil-calendar-alt"></i>
-                March 2022 - December 2022</span>
+                Marzo 2022 - Deciembre 2022</span>
             <div class="portfolio__container container swiper">
                 <div class="swiper-wrapper">
                     <!-- PORTFOLIO 1-->
