Update skills and CV

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>J.Alberto Azevedo - Desarrollador de Aplicaciones Web</title>
+    <title>J.Alberto Azevedo - Profesor y Desarrollador de Aplicaciones Web</title>
 </head>
 
 <body>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">J.Alberto Azevedo</h1>
-                        <h3 class="home__subtitle">Desarrollador de Aplicaciones Web</h3>
+                        <h3 class="home__subtitle">Profesor y Desarrollador de Aplicaciones Web</h3>
                         <p class="home__description"> "Listening, testing, coding, designing. That’s all there is to
                             software. Anyone who tells you different is selling something". Kent Beck. Extreme
                             programming: embrace change.
@@ -120,15 +120,14 @@
             <div class="about__container container grid">
                 <img src="assets/images/J.Alberto Azevedo-Frontend Developer2.png" alt="" class="about__img">
                 <div class="about__data">
-                    <p class="about__description">Soy un apasionado de JavaScript y todo su
+                    <p class="about__description">Soy un apasionado de la docencia así como de JavaScript y todo su
                         entorno.<br><br>
-                        Enfocado principalmente en el frontend con Vue y React. Sin embargo, mi gusto por un
-                        conocimiento integral hace que también trabaje el backend. <br><br>
+                        Principalmente, trabajo el frontend con Vanilla JS y React y el backend con NodeJS, MongoDB y MySQL. <br><br>
                         Un código sin testing no es código, tan solo una declaración de intenciones.</p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">1</span>
-                            <span class="about__info-name">Año <br> de experiencia</span>
+                            <span class="about__info-title">2</span>
+                            <span class="about__info-name">Años <br> de experiencia</span>
                         </div>
                         <div>
                             <span class="about__info-title">7</span>
@@ -142,7 +141,7 @@
                         </div> -->
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Desarrollador de Aplicaciones Web-es.pdf"
+                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV_docente_y_desarrollador_web.pdf"
                             class="button button--flex">
                             Descargar CV
                             <i class="uil uil-airplay button__icon"></i>
@@ -168,7 +167,7 @@
 
                             <div>
                                 <h1 class="skills__title">Frontend</h1>
-                                <span class="skills__subtitle"> 1 año</span>
+                                <span class="skills__subtitle"> 2 años</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -234,11 +233,21 @@
                         <div class="skills__list grid">
                             <span class="skills__subtitle"> Librerías/Frameworks</span>
 
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">React</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__react"></span>
+                                </div>
+                            </div>
+
 
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Vue</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__vue"></span>
@@ -248,22 +257,14 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Quasar</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__quasar"></span>
                                 </div>
                             </div>
 
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">React</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__react"></span>
-                                </div>
-                            </div>
+
 
 
                         </div>
@@ -277,7 +278,7 @@
 
                             <div>
                                 <h1 class="skills__title">Testing y otras tecnologías</h1>
-                                <span class="skills__subtitle"> 1 año</span>
+                                <span class="skills__subtitle"> 2 años</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -402,10 +403,33 @@
 
                             <div>
                                 <h1 class="skills__title">Backend</h1>
-                                <span class="skills__subtitle"> 1 año</span>
+                                <span class="skills__subtitle"> 2 años</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> Bases de Datos</span>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">MySQL</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mysql"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">MongoDB</h3>
+                                    <span class="skills__number">50%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__mongodb"></span>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="skills__list grid">
                             <span class="skills__subtitle"> JavaScript Backend</span>
@@ -453,38 +477,7 @@
                             </div>
 
                         </div>
-                        <div class="skills__list grid">
-                            <span class="skills__subtitle"> Bases de Datos</span>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">MariaDB</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mariadb"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">MongoDB</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mongodb"></span>
-                                </div>
-                            </div>
 
-                            <div class="skills__data">
-                                <div class="skills__titles">
-                                    <h3 class="skills__name">Mongoose</h3>
-                                    <span class="skills__number">50%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__mongoose"></span>
-                                </div>
-                            </div>
-
-                        </div>
                     </div>
 
                     <!-- SKILLS 4 SOFT SKILLS-->
