--- a/index.html
+++ b/index.html
@@ -659,6 +659,29 @@
 
                         <!-- QUALIFICATION 1-->
                         <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+
+                            </div>
+                            <div>
+                                <h3 class="qualification__title"> Profesor de programación, desarrollo web y creación de videojuegos
+                                </h3>
+                                <span class="qualification__subtitle">Lifecole®, Barcelona
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Octubre 2023 - Presente
+                                </div>
+                            </div>
+
+                        </div>                        
+
+
+
+                        <!-- QUALIFICATION 2-->
+                        <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Desarrollador de Aplicaciones Web
                                 </h3>
@@ -674,7 +697,7 @@
                             </div>
                         </div>
 
-                        <!-- QUALIFICATION 2-->
+                        <!-- QUALIFICATION 3-->
                         <div class="qualification__data">
                             <div></div>
                             <div>
@@ -696,7 +719,7 @@
 
                         </div>
 
-                        <!-- QUALIFICATION 3-->
+                        <!-- QUALIFICATION 4-->
                         <div class="qualification__data">
                             <div>
                                 <h3 class="qualification__title">Docente - Tutor Privado
